[gd_scene load_steps=18 format=3 uid="uid://cdhd52yg5svaj"]

[ext_resource type="Script" path="res://plugin/file_list/v1_0_1/ui/main.gd" id="1_dm3q2"]
[ext_resource type="Texture2D" uid="uid://vpm471rfij04" path="res://plugin/file_list/v1_0_1/ui/assets/Panels1.svg" id="2_g1ymr"]
[ext_resource type="Texture2D" uid="uid://v2ugf5t3b88i" path="res://plugin/file_list/v1_0_1/ui/assets/ArrowLeft.svg" id="2_p7tem"]
[ext_resource type="Texture2D" uid="uid://bpnid88qofo28" path="res://plugin/file_list/v1_0_1/ui/assets/filter_include.svg" id="2_qekye"]
[ext_resource type="Texture2D" uid="uid://c32lrnxv7bvch" path="res://plugin/file_list/v1_0_1/ui/assets/ArrowRight.svg" id="3_b7vik"]
[ext_resource type="Texture2D" uid="uid://bc4eedim7ykg6" path="res://plugin/file_list/v1_0_1/ui/assets/Tools.svg" id="3_bh0mf"]
[ext_resource type="Texture2D" uid="uid://dkuanlgm7lrqj" path="res://plugin/file_list/v1_0_1/ui/assets/AnimationTrackList.svg" id="3_gir4i"]
[ext_resource type="Texture2D" uid="uid://b0itmbjfsywg6" path="res://plugin/file_list/v1_0_1/ui/assets/filter_exclude.svg" id="3_riq0k"]
[ext_resource type="Texture2D" uid="uid://kh4ekapbs2pk" path="res://plugin/file_list/v1_0_1/ui/assets/AnimationTrackGroup.svg" id="4_8ltwd"]
[ext_resource type="Texture2D" uid="uid://dtrmo4ttwmd7l" path="res://plugin/file_list/v1_0_1/ui/assets/folder_empty.svg" id="4_eov1q"]
[ext_resource type="Texture2D" uid="uid://ddouhbgcphchs" path="res://plugin/file_list/v1_0_1/ui/assets/ArrowUp.svg" id="4_o00lp"]
[ext_resource type="Texture2D" uid="uid://1sk2vj4kc6fd" path="res://plugin/file_list/v1_0_1/ui/assets/Reload.svg" id="5_y56n5"]
[ext_resource type="Texture2D" uid="uid://b4wx81tx7hybh" path="res://plugin/file_list/v1_0_1/ui/assets/Add.svg" id="6_lliyo"]
[ext_resource type="Texture2D" uid="uid://qnjfv7mue2s2" path="res://plugin/file_list/v1_0_1/ui/assets/Search.svg" id="7_o8exg"]
[ext_resource type="Texture2D" uid="uid://dfmeohirdx8lg" path="res://plugin/file_list/v1_0_1/ui/assets/inbox.svg" id="7_p4cub"]
[ext_resource type="PackedScene" uid="uid://bjr1r18348lo4" path="res://plugin/file_list/v1_0_1/ui/add_point.tscn" id="16_q2pfp"]
[ext_resource type="PackedScene" uid="uid://i1lysgh0ffsk" path="res://plugin/file_list/v1_0_1/ui/search_config.tscn" id="17_8h7qu"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dm3q2")

[node name="VBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBox3" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/HBox3"]
layout_mode = 2
mouse_filter = 2

[node name="Backward" type="TextureButton" parent="VBox/HBox3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("2_p7tem")
ignore_texture_size = true
stretch_mode = 5

[node name="Forward" type="TextureButton" parent="VBox/HBox3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("3_b7vik")
ignore_texture_size = true
stretch_mode = 5

[node name="Upward" type="TextureButton" parent="VBox/HBox3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("4_o00lp")
ignore_texture_size = true
stretch_mode = 5

[node name="Refresh" type="TextureButton" parent="VBox/HBox3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("5_y56n5")
ignore_texture_size = true
stretch_mode = 5

[node name="AddPoint" type="TextureButton" parent="VBox/HBox3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("6_lliyo")
ignore_texture_size = true
stretch_mode = 5

[node name="DownloadPoint" type="TextureButton" parent="VBox/HBox3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("7_p4cub")
ignore_texture_size = true
stretch_mode = 5

[node name="ForceDownloadPoint" type="TextureButton" parent="VBox/HBox3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("7_p4cub")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBox/HBox3/HBoxContainer/ForceDownloadPoint"]
modulate = Color(0, 0.737255, 0.498039, 1)
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 20.0
grow_horizontal = 0
texture = ExtResource("5_y56n5")
expand_mode = 1
stretch_mode = 5

[node name="MainPath" type="LineEdit" parent="VBox/HBox3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelSplit" type="TextureButton" parent="VBox/HBox3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("2_g1ymr")
ignore_texture_size = true
stretch_mode = 5

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 2

[node name="Option" type="OptionButton" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
clip_text = true
expand_icon = true

[node name="Config" type="TextureButton" parent="VBox/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Config Views"
texture_normal = ExtResource("3_bh0mf")
ignore_texture_size = true
stretch_mode = 5

[node name="HBox2" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 2

[node name="Collapse" type="TextureButton" parent="VBox/HBox2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Collapse All"
texture_normal = ExtResource("3_gir4i")
ignore_texture_size = true
stretch_mode = 5

[node name="Unfold" type="TextureButton" parent="VBox/HBox2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Unfold All"
texture_normal = ExtResource("4_8ltwd")
ignore_texture_size = true
stretch_mode = 5

[node name="VSeparator2" type="VSeparator" parent="VBox/HBox2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ApplyInclude" type="TextureButton" parent="VBox/HBox2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Apply Include"
toggle_mode = true
texture_normal = ExtResource("2_qekye")
ignore_texture_size = true
stretch_mode = 5

[node name="ApplyExclude" type="TextureButton" parent="VBox/HBox2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Apply Exclude"
toggle_mode = true
texture_normal = ExtResource("3_riq0k")
ignore_texture_size = true
stretch_mode = 5

[node name="HideEmpty" type="TextureButton" parent="VBox/HBox2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Hide Empty Folder"
toggle_mode = true
texture_normal = ExtResource("4_eov1q")
ignore_texture_size = true
stretch_mode = 5

[node name="Show1" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBox4" type="HBoxContainer" parent="VBox/Show1"]
layout_mode = 2
mouse_filter = 2

[node name="LineEdit1" type="LineEdit" parent="VBox/Show1/HBox4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Search1" type="TextureButton" parent="VBox/Show1/HBox4/LineEdit1"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("7_o8exg")
ignore_texture_size = true
stretch_mode = 5

[node name="MainTree1" type="Tree" parent="VBox/Show1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
allow_rmb_select = true
hide_root = true

[node name="Show2" type="VSplitContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MainTree2" type="Tree" parent="VBox/Show2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
allow_rmb_select = true
hide_root = true

[node name="HSplit" type="VBoxContainer" parent="VBox/Show2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBox4" type="HBoxContainer" parent="VBox/Show2/HSplit"]
layout_mode = 2

[node name="LineEdit2" type="LineEdit" parent="VBox/Show2/HSplit/HBox4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Search2" type="TextureButton" parent="VBox/Show2/HSplit/HBox4/LineEdit2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("7_o8exg")
ignore_texture_size = true
stretch_mode = 5

[node name="SubTree2" type="Tree" parent="VBox/Show2/HSplit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
allow_rmb_select = true
hide_root = true

[node name="Show3" type="HSplitContainer" parent="VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MainTree3" type="Tree" parent="VBox/Show3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
allow_rmb_select = true
hide_root = true

[node name="HSplit" type="VBoxContainer" parent="VBox/Show3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox4" type="HBoxContainer" parent="VBox/Show3/HSplit"]
layout_mode = 2

[node name="LineEdit3" type="LineEdit" parent="VBox/Show3/HSplit/HBox4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Search3" type="TextureButton" parent="VBox/Show3/HSplit/HBox4/LineEdit3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
tooltip_text = "Config Views"
texture_normal = ExtResource("7_o8exg")
ignore_texture_size = true
stretch_mode = 5

[node name="SubTree3" type="Tree" parent="VBox/Show3/HSplit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
allow_rmb_select = true
hide_root = true

[node name="SearchConfig" parent="." instance=ExtResource("17_8h7qu")]
unique_name_in_owner = true
visible = false
exclusive = false
borderless = true

[node name="AddPointUI" parent="." instance=ExtResource("16_q2pfp")]
unique_name_in_owner = true
visible = false
exclusive = false
borderless = true

[connection signal="pressed" from="VBox/HBox3/HBoxContainer/Backward" to="." method="_on_backward_pressed"]
[connection signal="pressed" from="VBox/HBox3/HBoxContainer/Forward" to="." method="_on_forward_pressed"]
[connection signal="pressed" from="VBox/HBox3/HBoxContainer/Upward" to="." method="_on_upward_pressed"]
[connection signal="pressed" from="VBox/HBox3/HBoxContainer/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="VBox/HBox3/HBoxContainer/AddPoint" to="." method="_on_add_point_pressed"]
[connection signal="pressed" from="VBox/HBox3/HBoxContainer/DownloadPoint" to="." method="_on_download_point_pressed"]
[connection signal="pressed" from="VBox/HBox3/HBoxContainer/ForceDownloadPoint" to="." method="_on_force_download_point_pressed"]
[connection signal="pressed" from="VBox/HBox3/PanelSplit" to="." method="_on_panel_split_pressed"]
[connection signal="item_selected" from="VBox/HBox/Option" to="." method="_on_option_item_selected"]
[connection signal="pressed" from="VBox/HBox/Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="VBox/HBox2/Collapse" to="." method="_on_collapse_pressed"]
[connection signal="pressed" from="VBox/HBox2/Unfold" to="." method="_on_unfold_pressed"]
[connection signal="toggled" from="VBox/HBox2/ApplyInclude" to="." method="_on_apply_include_toggled"]
[connection signal="toggled" from="VBox/HBox2/ApplyExclude" to="." method="_on_apply_exclude_toggled"]
[connection signal="toggled" from="VBox/HBox2/HideEmpty" to="." method="_on_hide_empty_toggled"]
[connection signal="text_changed" from="VBox/Show1/HBox4/LineEdit1" to="." method="update_tree"]
[connection signal="text_submitted" from="VBox/Show1/HBox4/LineEdit1" to="." method="update_tree"]
[connection signal="pressed" from="VBox/Show1/HBox4/LineEdit1/Search1" to="." method="update_tree"]
[connection signal="item_activated" from="VBox/Show1/MainTree1" to="." method="_on_main_tree_item_activated"]
[connection signal="item_mouse_selected" from="VBox/Show1/MainTree1" to="." method="_on_main_tree_item_mouse_selected"]
[connection signal="item_selected" from="VBox/Show1/MainTree1" to="." method="_on_main_tree_item_selected"]
[connection signal="multi_selected" from="VBox/Show1/MainTree1" to="." method="_on_main_tree_multi_selected"]
[connection signal="item_activated" from="VBox/Show2/MainTree2" to="." method="_on_main_tree_item_activated"]
[connection signal="item_mouse_selected" from="VBox/Show2/MainTree2" to="." method="_on_main_tree_item_mouse_selected"]
[connection signal="item_selected" from="VBox/Show2/MainTree2" to="." method="_on_main_tree_item_selected"]
[connection signal="multi_selected" from="VBox/Show2/MainTree2" to="." method="_on_main_tree_multi_selected"]
[connection signal="text_changed" from="VBox/Show2/HSplit/HBox4/LineEdit2" to="." method="update_tree"]
[connection signal="text_submitted" from="VBox/Show2/HSplit/HBox4/LineEdit2" to="." method="update_tree"]
[connection signal="pressed" from="VBox/Show2/HSplit/HBox4/LineEdit2/Search2" to="." method="update_tree"]
[connection signal="item_activated" from="VBox/Show2/HSplit/SubTree2" to="." method="_on_sub_tree_item_activated"]
[connection signal="item_mouse_selected" from="VBox/Show2/HSplit/SubTree2" to="." method="_on_sub_tree_item_mouse_selected"]
[connection signal="item_selected" from="VBox/Show2/HSplit/SubTree2" to="." method="_on_sub_tree_item_selected"]
[connection signal="multi_selected" from="VBox/Show2/HSplit/SubTree2" to="." method="_on_sub_tree_multi_selected"]
[connection signal="item_activated" from="VBox/Show3/MainTree3" to="." method="_on_main_tree_item_activated"]
[connection signal="item_mouse_selected" from="VBox/Show3/MainTree3" to="." method="_on_main_tree_item_mouse_selected"]
[connection signal="item_selected" from="VBox/Show3/MainTree3" to="." method="_on_main_tree_item_selected"]
[connection signal="multi_selected" from="VBox/Show3/MainTree3" to="." method="_on_main_tree_multi_selected"]
[connection signal="text_changed" from="VBox/Show3/HSplit/HBox4/LineEdit3" to="." method="update_tree"]
[connection signal="text_submitted" from="VBox/Show3/HSplit/HBox4/LineEdit3" to="." method="update_tree"]
[connection signal="pressed" from="VBox/Show3/HSplit/HBox4/LineEdit3/Search3" to="." method="update_tree"]
[connection signal="item_activated" from="VBox/Show3/HSplit/SubTree3" to="." method="_on_sub_tree_item_activated"]
[connection signal="item_mouse_selected" from="VBox/Show3/HSplit/SubTree3" to="." method="_on_sub_tree_item_mouse_selected"]
[connection signal="item_selected" from="VBox/Show3/HSplit/SubTree3" to="." method="_on_sub_tree_item_selected"]
[connection signal="multi_selected" from="VBox/Show3/HSplit/SubTree3" to="." method="_on_sub_tree_multi_selected"]
[connection signal="update_search_config" from="SearchConfig" to="." method="_on_search_config_update_search_config"]
